tests/asm-link/local-purge/rgbasm.err
error: labels cannot be deleted
   ╭─[ test.asm:7:8 ]
   │
 7 │     PURGE .loc
   │           ──┬─  
   │             ╰─── attempting to delete `Glob.loc` here
───╯
error: the symbol `.loc` doesn't exist
   ╭─[ test.asm:8:12 ]
   │
 8 │     PRINTLN "{.loc}" ; This should fail because the label doesn't exist anymore
   │               ──┬─  
   │                 ╰─── this interpolation is invalid
───╯
2 errors generated.
